--- a/src/main/resources/vetcare/gui/initialScene.fxml
+++ b/src/main/resources/vetcare/gui/initialScene.fxml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
+
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
 <?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.GridPane?>
 
-<VBox id="telaInicio" alignment="CENTER"  spacing="30" prefHeight="600" prefWidth="800"
+
+<VBox id="telaInicio" alignment="CENTER"  spacing="30"
       xmlns:fx="http://javafx.com/fxml"
       fx:controller="vetcare.gui.HelloController" stylesheets="@styles.css">
 
