--- a/src/main/resources/vetcare/gui/mainMenu.fxml
+++ b/src/main/resources/vetcare/gui/mainMenu.fxml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.text.Font?>
 
-<VBox id="botoesNavegacao" alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml">
+<VBox id="mainMenu" alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml" stylesheets="styles.css">
 <!--      fx:controller="example.demo1.HelloController" stylesheets="@styles.css"-->
 
     <padding>
