--- a/src/main/resources/vetcare/gui/initialScene.fxml
+++ b/src/main/resources/vetcare/gui/initialScene.fxml
@@ -16,7 +16,7 @@
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
 
-    <!-- Imagem do ícone -->
+    <!-- initialScene's pet image -->
     <ImageView id="myImageView"
                preserveRatio="true" fitHeight="500" fitWidth="600">
         <Image url="@Images/telaInicial.jpeg"/>
