--- a/src/main/resources/vetcare/gui/mainMenu.fxml
+++ b/src/main/resources/vetcare/gui/mainMenu.fxml
@@ -4,12 +4,14 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
 
 <VBox id="mainMenu" alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml" stylesheets="styles.css">
 <!--      fx:controller="example.demo1.HelloController" stylesheets="@styles.css"-->
 
     <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+        <Insets />
     </padding>
 
     <GridPane xmlns:fx="http://javafx.com/fxml" alignment="CENTER" hgap="70" vgap="70">
@@ -19,4 +21,9 @@
         <Button text="Financeiro" GridPane.rowIndex="1" GridPane.columnIndex="1" prefHeight="200" prefWidth="300" style="-fx-font-size: 20px;"/>
     </GridPane>
 
+    <!-- Imagem do ícone -->
+    <ImageView id="myImageView"
+               preserveRatio="true" fitHeight="600" fitWidth="900">
+        <Image url="@Images/patinhas.png"/>
+    </ImageView>
 </VBox>
