--- a/src/main/resources/vetcare/gui/Scenes/consultas.fxml
+++ b/src/main/resources/vetcare/gui/Scenes/consultas.fxml
@@ -7,7 +7,8 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.text.TextFlow?>
 <?import javafx.geometry.Insets?>
-<StackPane xmlns:fx="http://javafx.com/fxml" fx:controller="vetcare.gui.PacientesController" styleClass="user-screen" >
+
+<StackPane xmlns:fx="http://javafx.com/fxml" fx:controller="vetcare.gui.ConsultasController" styleClass="user-screen" >
 	<Pane styleClass="decorated-background"/>
 	<BorderPane>
 		<top>
