--- a/src/main/resources/vetcare/gui/Scenes/carteirinha.fxml
+++ b/src/main/resources/vetcare/gui/Scenes/carteirinha.fxml
@@ -13,7 +13,7 @@
 <?import javafx.geometry.Insets?>
 <StackPane xmlns="http://javafx.com/javafx"
 		   xmlns:fx="http://javafx.com/fxml"
-		   fx:controller="vetcare.gui.CarteirinhaController"
+		   fx:controller="vetcare.gui.controllers.CarteirinhaController"
 		   prefHeight="400.0" prefWidth="600.0">
 	<VBox xmlns:fx="http://javafx.com/fxml" alignment="CENTER" spacing="8">
 		<StackPane.margin>
@@ -39,7 +39,9 @@
 		<Text fx:id="statusText" textAlignment="CENTER">
 			Esse animal não tem pendências.
 		</Text>
-		<Region VBox.vgrow="ALWAYS"/>
+		<ScrollPane VBox.vgrow="ALWAYS" fitToWidth="true">
+			<VBox fx:id="listaVacinas"/>
+		</ScrollPane>
 		<Button fx:id="sendNotificationBtn" onAction="#sendNotification">Enviar notificação</Button>
 		<CheckBox>Notificar automaticamente o dono sobre vacinas</CheckBox>
 	</VBox>
