--- a/src/main/resources/vetcare/gui/Scenes/consultas.fxml
+++ b/src/main/resources/vetcare/gui/Scenes/consultas.fxml
@@ -8,64 +8,64 @@
 <?import javafx.scene.text.TextFlow?>
 <?import javafx.geometry.Insets?>
 
-<StackPane xmlns:fx="http://javafx.com/fxml" fx:controller="vetcare.gui.ConsultasController" styleClass="user-screen" >
+<?import vetcare.gui.CirclePictureFrame?>
+<StackPane xmlns:fx="http://javafx.com/fxml" fx:controller="vetcare.gui.controllers.ConsultasController" styleClass="user-screen" >
 	<Pane styleClass="decorated-background"/>
 	<BorderPane>
 		<top>
-			<ImageView fx:id="logoBtn" fitHeight="64" preserveRatio="true" onMouseClicked="#goHome">
-				<Image url="@../Images/logo.png"/>
-			</ImageView>
+			<HBox>
+				<CirclePictureFrame imageUrl="@/vetcare/gui/Images/fundo.png" radius="48" onMouseClicked="#abrirMenuLateral"/>
+				<ImageView fitHeight="48" preserveRatio="true" onMouseClicked="#goHome">
+					<Image url="@../Images/logo.png"/>
+				</ImageView>
+			</HBox>
 		</top>
 		<center>
 			<BorderPane>
 				<top>
-					<TextField fx:id="searchField" styleClass="text-fieldx" onKeyTyped="#doSearch" promptText="Digite aqui o nome do paciente..."/>
+					<TextField fx:id="searchField" styleClass="text-fieldx" onKeyTyped="#doSearch" promptText="Digite aqui o nome ou CRMV do veterinário..."/>
 				</top>
 				<center>
 					<SplitPane style="-fx-background-color: white;" dividerPositions="0.25">
-						<ScrollPane>
-							<VBox fx:id="pacientes"/>
+						<ScrollPane fitToWidth="true">
+							<VBox fx:id="veterinarios"/>
 						</ScrollPane>
 						<StackPane>
 							<StackPane.margin>
 								<Insets left="8" top="8" right="8" bottom="8"/>
 							</StackPane.margin>
 							<Text>O paciente aparecerá aqui.</Text>
-							<BorderPane fx:id="fichaPaciente" visible="false" style="-fx-background-color: white;">
+							<BorderPane fx:id="fichaVeterinario" visible="false" style="-fx-background-color: white;">
 								<top>
 									<HBox styleClass="petCard">
 										<StackPane id="animalPhoto">
 											<HBox.margin><Insets right="4" bottom="4"/></HBox.margin>
 
-											<ImageView fx:id="petPhotoImage" fitWidth="128" fitHeight="120" preserveRatio="true" >
+											<ImageView fx:id="vetPhotoImage" fitWidth="128" fitHeight="120" preserveRatio="true" styleClass="cardPhoto">
 												<Image url="@../Images/cat1.png"/>
 											</ImageView>
 										</StackPane>
 										<VBox HBox.hgrow="ALWAYS">
-											<Text fx:id="animalName"/>
-											<Text fx:id="animalKind"/>
-											<TextFlow>
-												<Text text="Dono: "/>
-												<Text fx:id="animalOwner" onMouseClicked="#abrirDono"/>
-											</TextFlow>
+											<Text fx:id="vetName" styleClass="cardName"/>
+											<Text fx:id="vetCRMV" styleClass="cardProp"/>
+											<Text fx:id="vetKind" styleClass="cardProp"/>
 										</VBox>
-										<Button onMouseClicked="#abrirCarteirinha">Carteirinha</Button>
 									</HBox>
 								</top>
 								<center>
-									<GridPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" hgap="10" vgap="10">
+									<GridPane hgap="10" vgap="10">
 										<columnConstraints>
 											<ColumnConstraints percentWidth="0"/>
 											<ColumnConstraints halignment="CENTER" hgrow="ALWAYS"/>
 										</columnConstraints>
 										<Text      GridPane.rowIndex="0" GridPane.columnIndex="0">Nome</Text>
-										<TextField GridPane.rowIndex="0" GridPane.columnIndex="1" fx:id="petNameField"/>
-
+										<TextField GridPane.rowIndex="0" GridPane.columnIndex="1" fx:id="vetNameField"/>
+	<!--
 										<Text      GridPane.rowIndex="1" GridPane.columnIndex="0">Peso</Text>
 										<TextField GridPane.rowIndex="1" GridPane.columnIndex="1" fx:id="petWeightField"/>
 
 										<Text      GridPane.rowIndex="2" GridPane.columnIndex="0">Raça</Text>
-										<TextField GridPane.rowIndex="2" GridPane.columnIndex="1" fx:id="petRaceField"/>
+										<TextField GridPane.rowIndex="2" GridPane.columnIndex="1" fx:id="petRaceField"/>-->
 									</GridPane>
 								</center>
 								<bottom>
