--- a/src/main/resources/vetcare/gui/Scenes/dono.fxml
+++ b/src/main/resources/vetcare/gui/Scenes/dono.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
 <?import javafx.geometry.Insets?>
-<StackPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="vetcare.gui.DonoController" prefHeight="400.0" prefWidth="600.0">
+<StackPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="vetcare.gui.controllers.DonoController" prefHeight="400.0" prefWidth="600.0">
 	<VBox alignment="TOP_CENTER">
 		<GridPane hgap="10">
 			<VBox.margin>
