--- a/src/main/resources/vetcare/gui/Scenes/startScreen.fxml
+++ b/src/main/resources/vetcare/gui/Scenes/startScreen.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Button?>
 
-<VBox id="telaInicio" alignment="CENTER"  spacing="30" xmlns:fx="http://javafx.com/fxml" fx:controller="vetcare.gui.StartScreenController" >
+<VBox id="telaInicio" alignment="CENTER"  spacing="30" xmlns:fx="http://javafx.com/fxml" fx:controller="vetcare.gui.controllers.StartScreenController" >
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
