feat: tela de atendimento

--- a/src/main/resources/vetcare/gui/Scenes/carteirinha.fxml
+++ b/src/main/resources/vetcare/gui/Scenes/carteirinha.fxml
@@ -32,7 +32,7 @@
 				<Text fx:id="animalKind"/>
 				<TextFlow>
 					<Text text="Dono: "/>
-					<Text fx:id="animalOwner"/>
+					<Text fx:id="animalOwner" styleClass="link"/>
 				</TextFlow>
 			</VBox>
 		</HBox>
