--- a/src/main/resources/vetcare/gui/styles.css
+++ b/src/main/resources/vetcare/gui/styles.css
@@ -105,10 +105,6 @@ Text {
 	-fx-font-weight: bold;
 }
 
-#animalOwner {
-	-fx-fill: #1B75D0;
-}
-
 #animalPhoto {
 	-fx-border-width: 2px;
 	-fx-border-radius: 1px;
@@ -152,4 +148,8 @@ Text {
 
 .split-pane {
 	-fx-background-color: transparent;
+}
+
+.link {
+	-fx-fill: #1B75D0;
 }
