--- a/src/main/resources/vetcare/gui/Scenes/pacientes.fxml
+++ b/src/main/resources/vetcare/gui/Scenes/pacientes.fxml
@@ -71,11 +71,12 @@
 											<TextField GridPane.rowIndex="2" GridPane.columnIndex="1" fx:id="petRaceField"/>
 										</GridPane>
 										<Text style="-fx-font-size: 16pt; -fx-font-style: italic; -fx-font-weight: bold;">:: Atendimentos</Text>
-										<GridPane fx:id="tabVacinas" hgap="1" vgap="1" style="-fx-background-color: gray;">
+										<GridPane fx:id="tabVacinas" styleClass="table-grid" hgap="1" vgap="1" style="-fx-background-color: gray;">
 											<columnConstraints>
-												<ColumnConstraints percentWidth="40" hgrow="ALWAYS"/>
+												<ColumnConstraints percentWidth="30" hgrow="ALWAYS"/>
+												<ColumnConstraints percentWidth="30"/>
 												<ColumnConstraints percentWidth="20"/>
-												<ColumnConstraints percentWidth="40"/>
+												<ColumnConstraints percentWidth="20"/>
 											</columnConstraints>
 										</GridPane>
 									</VBox>
