--- a/src/main/resources/vetcare/gui/Scenes/financeiro.fxml
+++ b/src/main/resources/vetcare/gui/Scenes/financeiro.fxml
@@ -19,7 +19,9 @@
                 </ImageView>
             </HBox>
         </top>
-
+        <bottom>
+            <Button onAction="#addCliente">+</Button>
+        </bottom>
 
         <center>
             <BorderPane>
