feat: método e tela para adicionar um pet de um cliente já existente

--- a/src/main/resources/vetcare/gui/Scenes/financeiro.fxml
+++ b/src/main/resources/vetcare/gui/Scenes/financeiro.fxml
@@ -93,7 +93,7 @@
                                         <Button styleClass="botao-nova fatura" onAction="#addFatura">Adicionar Fatura</Button>
                                         <Button styleClass="botao-aviso" onAction="#resetData">Descartar Alterações</Button>
                                         <Button styleClass="botao-ok" onAction="#saveData">Salvar Alterações</Button>
-                                        <Button styleClass="botao-ok" onAction="#novoPet">+</Button>
+                                        <Button styleClass="botao-ok" onAction="#abrirJanelaAddPet">+</Button>
                                     </HBox>
                                 </bottom>
 
