--- a/src/main/resources/vetcare/gui/Scenes/pacientes.fxml
+++ b/src/main/resources/vetcare/gui/Scenes/pacientes.fxml
@@ -86,7 +86,7 @@
 										<Button styleClass="botao-aviso" onAction="#addConsulta">Adicionar consulta</Button>
 										<Button styleClass="botao-aviso" onAction="#resetData">Descartar Alterações</Button>
 										<Button styleClass="botao-ok" onAction="#saveData">Salvar Alterações</Button>
-										<Button styleClass="botao-ok" onAction="#novoPet">+</Button>
+										<Button styleClass="botao-aviso" onAction="#excluirPet">Excluir</Button>
 									</HBox>
 								</bottom>
 							</BorderPane>
